# py03-enum-variant-type

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: 01-parse.rs
